<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

<!--banner-->
    <TextView
        android:id="@+id/registerBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/grey1_BT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

<!--    first name-->
    <EditText
        android:id="@+id/fName"
        android:layout_width="338dp"
        android:layout_height="51dp"
        android:padding="14dp"
        android:hint="@string/first_name"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBanner"
        app:layout_constraintVertical_bias="0.108" />

<!--    last name -->
    <EditText
        android:id="@+id/lName"
        android:layout_width="338dp"
        android:layout_height="51dp"
        android:padding="14dp"
        android:hint="@string/last_name"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fName"
        app:layout_constraintVertical_bias="0.062" />

<!--    email-->
    <EditText
        android:id="@+id/eMail"
        android:layout_width="338dp"
        android:layout_height="51dp"
        android:padding="14dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lName"
        app:layout_constraintVertical_bias="0.078" />

<!--    password-->
    <androidx.cardview.widget.CardView
        android:id="@+id/textInputLayoutCard"
        android:layout_width="338dp"
        android:layout_height="58dp"
        android:background="@drawable/rounded"
        android:layout_marginLeft="37dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eMail"
        app:layout_constraintVertical_bias="0.085">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rPswd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="418dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

<!--    register button-->
    <Button
        android:id="@+id/regBtn"
        android:layout_width="338dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/button_Blue"
        android:text="@string/register"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCard"
        app:layout_constraintVertical_bias="0.168" />

<!--  link to register  -->
    <TextView
        android:id="@+id/loginTextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_have_acc"
        android:textSize="17sp"
        android:textColor="@color/grey1_BT"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regBtn"
        app:layout_constraintVertical_bias="0.176" />

    <!--    displays when login button is clicked and hides register button to show progress-->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746" />

</androidx.constraintlayout.widget.ConstraintLayout>