<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddAccount">

<!--    banner -->

    <!--    drop down to select and change icon-->
    <TextView
        android:id="@+id/textViewAdd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/add_account"
        android:textColor="@color/grey1_BT"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <ImageView
        android:id="@+id/iconImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewSpinnerImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdd"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSpinnerImg"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdd"
        app:layout_constraintVertical_bias="0.126">

        <Spinner
            android:id="@+id/changeImgIconSpin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>

<!--    social media name-->


    <EditText
        android:id="@+id/txtNameAdd"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded"
        android:hint="@string/social_media_name"
        android:padding="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewSpinnerImg"
        app:layout_constraintVertical_bias="0.043" />

    <!--    email -->
    <EditText
        android:id="@+id/txtEmailAdd"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded"
        android:hint="@string/email"
        android:padding="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameAdd"
        app:layout_constraintVertical_bias="0.04" />

<!--    password-->
    <androidx.cardview.widget.CardView
        android:id="@+id/textInputLayout2Card"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:layout_marginLeft="10dp"
        app:cardCornerRadius="10dp"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailAdd"
        app:layout_constraintVertical_bias="0.04">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPswdAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

<!--    url of the account page-->
    <EditText
        android:id="@+id/accPageUrl"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:hint="@string/account_page_url"
        android:padding="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2Card"
        app:layout_constraintVertical_bias="0.06" />

<!--    add account button-->
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/button_Blue"
        android:text="@string/add_account"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accPageUrl"
        app:layout_constraintVertical_bias="0.129" />

<!--    back button to home page-->
    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/grey1_BT"
        app:cardCornerRadius="60dp"
        android:layout_marginBottom="-62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintVertical_bias="0.408">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="49dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/back"
            app:tint="@color/white" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>