<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneratePassword">

<!--  banner-->
  <TextView
      android:id="@+id/textViewGenPswd"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/generate_password"
      android:textColor="@color/grey1_BT"
      android:textSize="28sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.092" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cardViewGenPswd"
      android:layout_width="367dp"
      android:layout_height="147dp"
      android:layout_marginRight="10dp"
      app:cardCornerRadius="10dp"
      android:backgroundTint="@color/edittextAsh"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.636"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewGenPswd"
      app:layout_constraintVertical_bias="0.126">

    <TextView
        android:id="@+id/genPswdOutput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="Generated password"
        android:padding="15dp"
        android:textSize="20sp"/>

  </androidx.cardview.widget.CardView>

<!--  generate 8 character password button-->
  <Button
      android:id="@+id/genBtn8"
      android:layout_width="366dp"
      android:layout_height="55dp"
      android:backgroundTint="@color/button_Blue"
      android:text="@string/gen_8_character"
      android:textSize="15sp"
      android:textStyle="bold"
      app:cornerRadius="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.616"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardViewGenPswd"
      app:layout_constraintVertical_bias="0.134" />

<!--  generate 16 character password button -->
  <Button
      android:id="@+id/genBtn16"
      android:layout_width="366dp"
      android:layout_height="55dp"
      android:backgroundTint="@color/button_Blue"
      android:text="@string/gen_16_character"
      android:textSize="15sp"
      android:textStyle="bold"
      app:cornerRadius="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.613"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/genBtn8"
      app:layout_constraintVertical_bias="0.112" />

<!--  back button to go back to home page-->
  <androidx.cardview.widget.CardView
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:layout_marginBottom="72dp"
      android:backgroundTint="@color/grey1_BT"
      app:cardCornerRadius="60dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.937"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnAdd"
      app:layout_constraintVertical_bias="0.408">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/back"
        app:tint="@color/white" />

  </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
